[package]
name = "ofl"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
edition = "2018"
publish = false

[[bin]]
name = "ofl"
path = "src/main.rs"

[dependencies]
avm1-parser = "^0.10.0"
avm1-types = "^0.10.0"
clap = {git = "https://github.com/clap-rs/clap/"}
serde = "^1.0.104"
serde_json_v8 = "^0.0.1"
swf-parser = "^0.11.0"
swf-types = "^0.11.0"
